# EE273Project

./: .$UML Diagram.drawio.bkp  .$UML Diagram.drawio.dtmp  .$UML Diagram.drawio_1.dtmp  .gitignore  CMakeLists.txt  README.md  UML Diagram.drawio  log.csv  log.xlsx
Antichess/: .gitignore  CMakeLists.txt  Points.cpp  Points.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Antichess/Chess/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Pieces.cpp  Pieces.h  Points.cpp  Points.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  blank.cpp  blank.h  board.cpp  board.h  move.cpp  move.h
Antichess/utils/: PushButton.h  clickableLabels.cpp  clickableLabels.h  clickablelabels.cpp  clickablelabels.h
build-Antichess-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Antichess-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-7b8ff4e4122ee4f52643.json  cmakeFiles-v1-d76819599de439c63a73.json  cmakeFiles-v1-de4ca039015a36b1733b.json  codemodel-v2-1c2ce43599501e9ee88e.json  codemodel-v2-c4ff4d806bcf8ca6731a.json  codemodel-v2-e696440b00fd707d5213.json  directory-.-Debug-474ab1cdd8a41679b697.json  (+11 more)
build-Antichess-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Antichess-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Antichess-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/Antichess_autogen/: deps
build-Antichess-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/Antichess_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-Antichess-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/Antichess_autogen/include/: ui_mainwindow.h
build-Antichess-Desktop_Qt_6_4_2_MinGW_64_bit-Profile/: CMakeCache.txt  qtcsettings.cmake
build-Antichess-Desktop_Qt_6_4_2_MinGW_64_bit-Release/: CMakeCache.txt
(+244 files in other folders)
